# numbers-c2pa

./: Makefile  README.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: build.yml  python-publish.yml
examples/: c2pa.json  inject_file.py  read_file.py
src/numbers_c2pa/: __init__.py  core.py  exceptions.py  utils.py
tests/: test_core.py
