[metadata]
name = numbers-c2pa
version = 0.0.3
author = Numbers Co., Inc
author_email = dev@numbersprotocol.io
description = Numbers C2PA tool
long_description = file: README.md
long_description_content_type = text/markdown
keywords = authenticity
url = https://github.com/numbersprotocol/numbers-c2pa
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
zip_safe = True
python_requires = >=3.6
packages = find:
install_requires =
    cryptography

[options.packages.find]
where = src
exclude = docs tests

[options.extras_require]
tests =
    tox

docs =
    sphinx

[coverage:run]
branch = True
source = numbers_c2pa

[coverage:paths]
source =
   src
   .tox/*/site-packages

[pylint.message_control]
disable=
    broad-except,
    import-error,
    invalid-name,
    line-too-long,
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,
    too-few-public-methods,
    too-many-public-methods,
    too-many-arguments,

[flake8]
max-line-length = 120
max-complexity = 10
exclude = .git,__pycache__,__init__.py,.mypy_cache,.pytest_cache,venv,.venv

[tox:tox]
envlist=
    py36, py37, py38, py39, py310, flake8, pylint, bandit

[testenv]
deps = 
    coverage
    pytest
    pytest-mock
    pytest-httpx
    pydantic_factories
    -r {tox_root}/requirements.txt
commands =
    coverage run -p -m pytest tests

[testenv:test]
description = run the test suite with pytest

[testenv:report]
deps = coverage
skip_install = true
commands =
    coverage combine
    coverage report -m
    coverage html

[testenv:flake8]
skip_install = true
deps = 
    flake8
commands =
    flake8 {tox_root}/src --statistics --count --show-source

[testenv:pylint]
skip_install = true
deps =
    pylint
commands =
    pylint src

[testenv:bandit]
skip_install = true
deps =
    bandit
commands =
    bandit -r src
